# backend

./: README.md  main.py  pyproject.toml  scripts.py
app/api/: dependancies.py  routes.py
app/core/: config.py
app/models/: __init__.py  execute_request.py
app/services/: __init__.py  curl_generator.py  har_parser.py  llmservice.py
