[project]
name = "app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "neelthepatel8", email = "patel.neel5@northeastern.edu"},
]
dependencies = ["fastapi[standard]>=0.115.11", "openai>=1.66.3", "httpx>=0.28.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
app = { call = "scripts:run_fastapi" }